added logout functionality

--- a/src/main.css
+++ b/src/main.css
@@ -600,6 +600,22 @@ video {
   bottom: 3rem;
 }
 
+.bottom-\[80\%\] {
+  bottom: 80%;
+}
+
+.bottom-\[50\%\] {
+  bottom: 50%;
+}
+
+.bottom-\[40\%\] {
+  bottom: 40%;
+}
+
+.bottom-\[45\%\] {
+  bottom: 45%;
+}
+
 .m-0 {
   margin: 0px;
 }
@@ -617,6 +633,11 @@ video {
 .mx-16 {
   margin-left: 4rem;
   margin-right: 4rem;
+}
+
+.mx-8 {
+  margin-left: 2rem;
+  margin-right: 2rem;
 }
 
 .mt-\[100px\] {
@@ -695,14 +716,6 @@ video {
   margin-bottom: 2.5rem;
 }
 
-.mt-20 {
-  margin-top: 5rem;
-}
-
-.mb-12 {
-  margin-bottom: 3rem;
-}
-
 .mb-7 {
   margin-bottom: 1.75rem;
 }
@@ -711,8 +724,12 @@ video {
   margin-left: 50px;
 }
 
-.-mt-14 {
-  margin-top: -3.5rem;
+.mb-12 {
+  margin-bottom: 3rem;
+}
+
+.mt-20 {
+  margin-top: 5rem;
 }
 
 .box-border {
@@ -725,6 +742,10 @@ video {
 
 .flex {
   display: flex;
+}
+
+.table-cell {
+  display: table-cell;
 }
 
 .grid {
@@ -771,6 +792,10 @@ video {
   height: 100%;
 }
 
+.h-16 {
+  height: 4rem;
+}
+
 .h-20 {
   height: 5rem;
 }
@@ -795,12 +820,16 @@ video {
   height: 1.25rem;
 }
 
-.h-12 {
-  height: 3rem;
+.h-80 {
+  height: 20rem;
 }
 
-.h-16 {
-  height: 4rem;
+.h-28 {
+  height: 7rem;
+}
+
+.h-24 {
+  height: 6rem;
 }
 
 .w-\[132px\] {
@@ -831,12 +860,12 @@ video {
   width: 400px;
 }
 
-.w-\[418px\] {
-  width: 418px;
-}
-
 .w-full {
   width: 100%;
+}
+
+.w-\[418px\] {
+  width: 418px;
 }
 
 .w-\[113px\] {
@@ -881,6 +910,16 @@ video {
 
 .w-\[43\%\] {
   width: 43%;
+}
+
+.w-min {
+  width: -webkit-min-content;
+  width: min-content;
+}
+
+.w-max {
+  width: -webkit-max-content;
+  width: max-content;
 }
 
 .max-w-\[360px\] {
@@ -941,6 +980,18 @@ video {
   grid-template-columns: 346px 50% 1fr;
 }
 
+.grid-cols-\[repeat\(4\2c 264px\)\] {
+  grid-template-columns: repeat(4,264px);
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.grid-cols-\[70\%_10\%_10\%\] {
+  grid-template-columns: 70% 10% 10%;
+}
+
 .grid-rows-\[repeat\(9\2c 1fr\)\] {
   grid-template-rows: repeat(9,1fr);
 }
@@ -991,13 +1042,13 @@ video {
           column-gap: 7rem;
 }
 
-.gap-y-5 {
-  row-gap: 1.25rem;
-}
-
 .gap-x-5 {
   -webkit-column-gap: 1.25rem;
           column-gap: 1.25rem;
+}
+
+.gap-y-5 {
+  row-gap: 1.25rem;
 }
 
 .gap-x-10 {
@@ -1022,6 +1073,21 @@ video {
 .gap-x-3 {
   -webkit-column-gap: 0.75rem;
           column-gap: 0.75rem;
+}
+
+.gap-x-1 {
+  -webkit-column-gap: 0.25rem;
+          column-gap: 0.25rem;
+}
+
+.gap-x-8 {
+  -webkit-column-gap: 2rem;
+          column-gap: 2rem;
+}
+
+.gap-x-16 {
+  -webkit-column-gap: 4rem;
+          column-gap: 4rem;
 }
 
 .self-center {
@@ -1154,34 +1220,6 @@ video {
   background-image: url(./assets/images/artisan-3.png);
 }
 
-.bg-\[url\(\.\/assets\/images\/artisan-4\.png\)\] {
-  background-image: url(./assets/images/artisan-4.png);
-}
-
-.bg-\[url\(\.\/assets\/images\/artisan-5\.png\)\] {
-  background-image: url(./assets/images/artisan-5.png);
-}
-
-.bg-\[url\(\.\/assets\/images\/artisan-7\.png\)\] {
-  background-image: url(./assets/images/artisan-7.png);
-}
-
-.bg-\[url\(\.\/assets\/images\/artisan-8\.png\)\] {
-  background-image: url(./assets/images/artisan-8.png);
-}
-
-.bg-\[url\(\.\/assets\/images\/artisan-9\.png\)\] {
-  background-image: url(./assets/images/artisan-9.png);
-}
-
-.bg-\[url\(\.\/assets\/images\/artisan-10\.png\)\] {
-  background-image: url(./assets/images/artisan-10.png);
-}
-
-.bg-\[url\(\.\/assets\/images\/artisan-11\.png\)\] {
-  background-image: url(./assets/images/artisan-11.png);
-}
-
 .bg-contain {
   background-size: contain;
 }
@@ -1196,6 +1234,10 @@ video {
 
 .bg-top {
   background-position: top;
+}
+
+.bg-no-repeat {
+  background-repeat: no-repeat;
 }
 
 .object-contain {
@@ -1252,6 +1294,21 @@ video {
   padding-right: 1.25rem;
 }
 
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .pt-8 {
   padding-top: 2rem;
 }
@@ -1266,6 +1323,10 @@ video {
 
 .text-right {
   text-align: right;
+}
+
+.align-middle {
+  vertical-align: middle;
 }
 
 .font-poppins {
